# zfp

./: .gitignore  README.md
examples/: ppm.c
src/template/: decode.c  encode.c
zfp-tests/: CMakeLists.txt  main.cpp
